[project]
name = "taller-poetry-finance"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicolás Romero",email = "nicoromero02@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "taller-poetry-finance", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
